[package]
name = "cdg_renderer"
version = "0.7.0"
authors = ["TQ Hirsch <thequux@thequux.com>"]
description = "CD+G renderer"
repository = "https://github.com/cdg-rs/cdg"
license = "ISC"

keywords = ["cdg", "karaoke"]


[dependencies]
cdg = "0.1"
image = { version = "0.24", default-features = false }
